syntax = "proto3";

package user;
option go_package = "/user";

service UserService {
  rpc NotifyUser (Request) returns (NotifyResponse);
}

message Request {
  string user_id = 1;
}

message NotifyResponse {
  string message = 1;
}
